Fixes in tests, repositories and service layer - removing breaklines - renaming of methods - simplifying converter tests